@@ -1,3 +1,10 @@
+2009-07-27  M R Swami Reddy <MR.Swami.Reddy@nsc.com>
+
+	* config/tc-cr16.c (md_apply_fix): Put the addend value alone in to
+	object file without symbol values.
+	(tc_gen_reloc): For local symbols resolved or its absolute symbol,
+	then set the relocation type as NULL. 
+
 2009-07-25  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/tc-i386.c (cpu_arch): Add l1om.
